force-app/main/default/objects/Case/fields/CC_Registro_de_escrito__c.field-meta.xml
<CustomField>
    <fullName>CC_Registro_de_escrito__c</fullName>
    <label>Registro de escrito</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buzón SAC</fullName>
            </value>
            <value>
                <fullName>Formulario Web con adjunto</fullName>
            </value>
            <value>
                <fullName>Formulario Web sin adjunto</fullName>
            </value>
            <value>
                <fullName>Valija electrónica</fullName>
            </value>
            <value>
                <fullName>Carta física</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>