force-app/main/default/objects/Case/fields/CC_Repetitivo__c.field-meta.xml
<CustomField>
    <fullName>CC_Repetitivo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repetitivo</label>
    <type>Checkbox</type>
</CustomField>