force-app/main/default/objects/Case/fields/CC_Representante__c.field-meta.xml
<CustomField>
    <fullName>CC_Representante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Representante del cliente asociado al caso.</description>
    <label>Representante</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_Representante_Contrato__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Representante</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CC_Representante_Contrato__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>CC_CasosRepresentante</relationshipName>
    <type>Lookup</type>
</CustomField>