force-app/main/default/objects/Case/fields/CC_Resolucion__c.field-meta.xml
<CustomField>
    <fullName>CC_Resolucion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolución 3Nivel</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>