force-app/main/default/objects/Case/fields/CC_Respuesta_Personalizada__c.field-meta.xml
<CustomField>
    <fullName>CC_Respuesta_Personalizada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcamos si se trata de una respuesta personalizada a partir de una tarea con el subject &quot;Personalizada&quot;.</description>
    <label>Respuesta Personalizada</label>
    <type>Checkbox</type>
</CustomField>