force-app/main/default/objects/Case/fields/CC_Resultado_Operativa_Tarjetas__c.field-meta.xml
<CustomField>
    <fullName>CC_Resultado_Operativa_Tarjetas__c</fullName>
    <label>Resultado Operativa Tarjetas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>NOK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>