force-app/main/default/objects/Case/fields/CC_Resumen_AI__c.field-meta.xml
<CustomField>
    <fullName>CC_Resumen_AI__c</fullName>
    <defaultValue>&quot;Sin Información&quot;</defaultValue>
    <description>Se crea para proyectos relacionados a GENiaL</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Resumen</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>