force-app/main/default/objects/Case/fields/CC_Saludo_Horario__c.field-meta.xml
<CustomField>
    <fullName>CC_Saludo_Horario__c</fullName>
    <formula>IF(TEXT(CC_Idioma__c)==&quot;ca&quot;,IF(VALUE(MID(TEXT(NOW()), 12, 2)) &lt; 12, &quot;Bon dia&quot;, (IF(VALUE(MID(TEXT(NOW()), 12, 2)) &lt; 19, &quot;Bona tarda&quot;, &quot;Bona nit&quot;))),IF(TEXT(CC_Idioma__c)==&quot;en&quot;,IF(VALUE(MID(TEXT(NOW()), 12, 2)) &lt; 12, &quot;Good morning&quot;, (IF(VALUE(MID(TEXT(NOW()), 12, 2)) &lt; 19, &quot;Good afternoon&quot;, &quot;Good night&quot;))),IF(VALUE(MID(TEXT(NOW()), 12, 2)) &lt; 12, &quot;Buenos días&quot;, (IF(VALUE(MID(TEXT(NOW()), 12, 2)) &lt; 19, &quot;Buenas tardes&quot;, &quot;Buenas noches&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saludo horario</label>
    <type>Text</type>
</CustomField>