force-app/main/default/objects/Case/fields/CC_SegOperativa__c.field-meta.xml
<CustomField>
    <fullName>CC_SegOperativa__c</fullName>
    <description>Indicador del estado de envío del aviso de seguimiento de operativa</description>
    <inlineHelpText>Indicador del estado de envío del aviso de seguimiento de operativa</inlineHelpText>
    <label>Seguimiento operativa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_EstadoEnvioNotif</valueSetName>
    </valueSet>
</CustomField>