force-app/main/default/objects/Case/fields/CC_Sentimiento_Formula__c.field-meta.xml
<CustomField>
    <fullName>CC_Sentimiento_Formula__c</fullName>
    <formula>IF(CC_Sentimiento__c = &apos;0&apos;, IMAGE(&quot;/resource/1697642220000/CC_Neutro?&quot;,&apos;Neutro&apos;, 20, 40),
IF(CC_Sentimiento__c = &apos;1&apos;, IMAGE(&quot;/resource/1697641585000/CC_Alerta?&quot;,&apos;Alerta&apos;, 20, 40),&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sentimiento</label>
    <type>Text</type>
</CustomField>