force-app/main/default/objects/Case/fields/CC_Sistema_Operativo__c.field-meta.xml
<CustomField>
    <fullName>CC_Sistema_Operativo__c</fullName>
    <label>Sistema Operativo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CC_Canal_Operativo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>IOS</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>