force-app/main/default/objects/Case/fields/CC_SLA_Atender_Twitter__c.field-meta.xml
<CustomField>
    <fullName>CC_SLA_Atender_Twitter__c</fullName>
    <description>Calculamos si se cumple el SLA de atender el Twitter en menos de 30 minutos.</description>
    <formula>IF((CC_Tiempo_Respuesta_Twitter__c &lt;= 30),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Twitter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>