force-app/main/default/objects/Case/fields/CC_SLA_Fecha_Limite_Resolucion__c.field-meta.xml
<CustomField>
    <fullName>CC_SLA_Fecha_Limite_Resolucion__c</fullName>
    <formula>IF(ISBLANK(CC_Fecha_Limite_Resolucion__c), null,
IF (IF(IsClosed, ClosedDate, NOW()) &lt;= CC_Fecha_Limite_Resolucion__c+1, 1, 0))</formula>
    <label>SLA Fecha Límite Resolución</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>