force-app/main/default/objects/Case/fields/CC_SLA_Formulario_3__c.field-meta.xml
<CustomField>
    <fullName>CC_SLA_Formulario_3__c</fullName>
    <description>SLA 3 formularios, entre 48 y 72h (9%)</description>
    <formula>IF(AND(ISNULL(CC_Fecha_Activo_Formulario__c),CC_Respuesta_Personalizada__c = false),IF(AND(CC_Tiempo_Cerrado_FormWeb__c &gt; 48,CC_Tiempo_Cerrado_FormWeb__c &lt;= 72),1,0),null)</formula>
    <label>SLA Formulario 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>