force-app/main/default/objects/Case/fields/CC_Social_Persona__c.field-meta.xml
<CustomField>
    <fullName>CC_Social_Persona__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup a la entidad Social Persona para que aparezcan los datos del Social Persona relacionados al Caso.</description>
    <label>Social Persona</label>
    <referenceTo>SocialPersona</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>