force-app/main/default/objects/Case/fields/CC_SuppliedApellido1__c.field-meta.xml
<CustomField>
    <fullName>CC_SuppliedApellido1__c</fullName>
    <description>Servicio web creación casos. Primer apellido proporcionado.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Primer apellido proporcionado.</inlineHelpText>
    <label>Apellido 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>