force-app/main/default/objects/Case/fields/CC_SuppliedApp__c.field-meta.xml
<CustomField>
    <fullName>CC_SuppliedApp__c</fullName>
    <description>Servicio web creación casos. Aplicación asociada al caso.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Aplicación asociada al caso.</inlineHelpText>
    <label>Aplicación</label>
    <length>40</length>
    <type>Text</type>
</CustomField>