force-app/main/default/objects/Case/fields/CC_SuppliedConexion__c.field-meta.xml
<CustomField>
    <fullName>CC_SuppliedConexion__c</fullName>
    <description>Servicio web creación casos. Datos de conexión del cliente.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Datos de conexión del cliente.</inlineHelpText>
    <label>Conexión cliente</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>