force-app/main/default/objects/Case/fields/CC_SuppliedEntidad__c.field-meta.xml
<CustomField>
    <fullName>CC_SuppliedEntidad__c</fullName>
    <description>Servicio web creación casos. Entidad asociada al caso.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Entidad asociada al caso.</inlineHelpText>
    <label>Entidad</label>
    <length>40</length>
    <type>Text</type>
</CustomField>