force-app/main/default/objects/Case/fields/CC_SuppliedFiles__c.field-meta.xml
<CustomField>
    <fullName>CC_SuppliedFiles__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Servicio web creación casos. Ficheros adjuntos al formulario.</description>
    <inlineHelpText>Ficheros adjuntos al formulario.</inlineHelpText>
    <label>Ficheros adjuntos</label>
    <type>Checkbox</type>
</CustomField>