force-app/main/default/objects/Case/fields/CC_SuppliedID__c.field-meta.xml
<CustomField>
    <fullName>CC_SuppliedID__c</fullName>
    <description>Servicio web creación casos. Identificador petición.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Identificador petición.</inlineHelpText>
    <label>Identificador</label>
    <length>40</length>
    <type>Text</type>
</CustomField>