force-app/main/default/objects/Case/fields/CC_SuppliedIdioma__c.field-meta.xml
<CustomField>
    <fullName>CC_SuppliedIdioma__c</fullName>
    <description>Servicio web creación casos. Idioma del formulario.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Idioma del formulario.</inlineHelpText>
    <label>Idioma formulario</label>
    <length>3</length>
    <type>Text</type>
</CustomField>