force-app/main/default/objects/Case/fields/CC_SuppliedIndLOE__c.field-meta.xml
<CustomField>
    <fullName>CC_SuppliedIndLOE__c</fullName>
    <description>Servicio web creación casos. Indicador si el cliente pertenece a LOE.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Indicador si el cliente pertenece a LOE.</inlineHelpText>
    <label>Cliente LOE</label>
    <length>2</length>
    <type>Text</type>
</CustomField>