force-app/main/default/objects/Case/fields/CC_SuppliedInterlocutor__c.field-meta.xml
<CustomField>
    <fullName>CC_SuppliedInterlocutor__c</fullName>
    <description>Interlocutor para el Formulario de Preventivas</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Interlocutor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>