force-app/main/default/objects/Case/fields/CC_SuppliedIP__c.field-meta.xml
<CustomField>
    <fullName>CC_SuppliedIP__c</fullName>
    <description>Servicio web creación casos. Dirección IP de conexión.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Dirección IP de conexión.</inlineHelpText>
    <label>Dirección IP</label>
    <length>15</length>
    <type>Text</type>
</CustomField>