force-app/main/default/objects/Case/fields/CC_SuppliedMotivo__c.field-meta.xml
<CustomField>
    <fullName>CC_SuppliedMotivo__c</fullName>
    <description>Servicio web creación casos. Motivo del formulario web.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Motivo del formulario web.</inlineHelpText>
    <label>Motivo formulario</label>
    <length>100</length>
    <type>Text</type>
</CustomField>