force-app/main/default/objects/Case/fields/CC_SuppliedMotivoDesc__c.field-meta.xml
<CustomField>
    <fullName>CC_SuppliedMotivoDesc__c</fullName>
    <description>Descripción del motivo del formulario web</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Descripción del motivo del formulario web</inlineHelpText>
    <label>Motivo formulario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>