force-app/main/default/objects/Case/fields/CC_SuppliedNIF__c.field-meta.xml
<CustomField>
    <fullName>CC_SuppliedNIF__c</fullName>
    <description>Servicio web creación casos. Documento de identidad proporcionado.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Documento de identidad proporcionado.</inlineHelpText>
    <label>NIF</label>
    <length>20</length>
    <type>Text</type>
</CustomField>