force-app/main/default/objects/Case/fields/CC_SuppliedOficina__c.field-meta.xml
<CustomField>
    <fullName>CC_SuppliedOficina__c</fullName>
    <description>Servicio web creación casos. Oficina.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Oficina.</inlineHelpText>
    <label>Oficina</label>
    <length>5</length>
    <type>Text</type>
</CustomField>