force-app/main/default/objects/Case/fields/CC_SuppliedOrigen__c.field-meta.xml
<CustomField>
    <fullName>CC_SuppliedOrigen__c</fullName>
    <description>Servicio web creación casos. Origen del formulario.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Origen del formulario.</inlineHelpText>
    <label>Origen</label>
    <length>5</length>
    <type>Text</type>
</CustomField>