force-app/main/default/objects/Case/fields/CC_SuppliedProducto__c.field-meta.xml
<CustomField>
    <fullName>CC_SuppliedProducto__c</fullName>
    <description>Servicio web creación casos. Producto formulario web.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Producto formulario web.</inlineHelpText>
    <label>Producto formulario</label>
    <length>100</length>
    <type>Text</type>
</CustomField>