force-app/main/default/objects/Case/fields/CC_SuppliedServicio__c.field-meta.xml
<CustomField>
    <fullName>CC_SuppliedServicio__c</fullName>
    <description>Servicio web creación casos. Servicio del formulario.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Servicio del formulario.</inlineHelpText>
    <label>Servicio formulario</label>
    <length>30</length>
    <type>Text</type>
</CustomField>