force-app/main/default/objects/Case/fields/CC_SuppliedTipo__c.field-meta.xml
<CustomField>
    <fullName>CC_SuppliedTipo__c</fullName>
    <description>Servicio web creación casos. Tipo de formulario.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Tipo de formulario.</inlineHelpText>
    <label>Tipo formulario</label>
    <length>30</length>
    <type>Text</type>
</CustomField>