force-app/main/default/objects/Case/fields/CC_SuppliedURL__c.field-meta.xml
<CustomField>
    <fullName>CC_SuppliedURL__c</fullName>
    <description>Servicio web creación casos. URL del formulario.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>URL del formulario.</inlineHelpText>
    <label>URL formulario</label>
    <type>Url</type>
</CustomField>