force-app/main/default/objects/Case/fields/CC_SuppliedUser__c.field-meta.xml
<CustomField>
    <fullName>CC_SuppliedUser__c</fullName>
    <description>Servicio web creación casos. Código de usuario web.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Código de usuario web.</inlineHelpText>
    <label>Cod. Usuario</label>
    <length>20</length>
    <type>Text</type>
</CustomField>