force-app/main/default/objects/Case/fields/CC_SuppliedWeb__c.field-meta.xml
<CustomField>
    <fullName>CC_SuppliedWeb__c</fullName>
    <description>Servicio web creación casos. Web asociada al formulario.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Web asociada al formulario.</inlineHelpText>
    <label>Web formulario</label>
    <length>30</length>
    <type>Text</type>
</CustomField>