force-app/main/default/objects/Case/fields/CC_Telefono_Contacto__c.field-meta.xml
<CustomField>
    <fullName>CC_Telefono_Contacto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Teléfono de contacto</label>
    <type>Phone</type>
</CustomField>