force-app/main/default/objects/Case/fields/CC_Tematica__c.field-meta.xml
<CustomField>
    <fullName>CC_Tematica__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Temática (interno)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>