force-app/main/default/objects/Case/fields/CC_Tiempo_Cerrado_FormWeb__c.field-meta.xml
<CustomField>
    <fullName>CC_Tiempo_Cerrado_FormWeb__c</fullName>
    <description>Tiempo que se ha tardado en cerrar un Caso de Formulario Web tabulado (respuesta con un template)  o personalizado (ha habido algún traslasdo colaborador, 3N, Incidencia,...)</description>
    <formula>IF(AND(ISNULL(CC_Fecha_Activo_Formulario__c),CC_Respuesta_Personalizada__c = false,NOT(ISNULL(ClosedDate))),(ClosedDate - CreatedDate)*24,
	IF(AND(NOT(ISNULL(CC_Fecha_Activo_Formulario__c)),CC_Respuesta_Personalizada__c = false, NOT(ISNULL(ClosedDate))), (ClosedDate - CC_Fecha_Activo_Formulario__c)*24,
		IF(AND(ISNULL(CC_Fecha_Activo_Formulario__c),CC_Respuesta_Personalizada__c = true, NOT(ISNULL(ClosedDate))), (ClosedDate - CreatedDate)*24,
			IF(AND(NOT(ISNULL(CC_Fecha_Activo_Formulario__c)),CC_Respuesta_Personalizada__c = false, ISNULL(ClosedDate)), (NOW() - CC_Fecha_Activo_Formulario__c)*24,
				IF(AND(NOT(ISNULL(CC_Fecha_Activo_Formulario__c)),CC_Respuesta_Personalizada__c = true, ISNULL(ClosedDate)), (NOW() - CC_Fecha_Activo_Formulario__c)*24,
					IF(AND(ISNULL(CC_Fecha_Activo_Formulario__c),CC_Respuesta_Personalizada__c = true, ISNULL(ClosedDate)), (NOW() - CreatedDate)*24,
						(NOW() - CreatedDate)*24
					)
				)
			)
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo Cerrado Formulario</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>