force-app/main/default/objects/Case/fields/CC_Tiempo_desde_traslado_3N__c.field-meta.xml
<CustomField>
    <fullName>CC_Tiempo_desde_traslado_3N__c</fullName>
    <formula>ClosedDate - CC_Fecha_Traslado_3N__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo desde traslado 3N</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>