force-app/main/default/objects/Case/fields/CC_Tiempo_Empleado__c.field-meta.xml
<CustomField>
    <fullName>CC_Tiempo_Empleado__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Campo para medir el tiempo que ha estado el caso en pendiente informacion por un empleado</description>
    <label>Tiempo Empleado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>