force-app/main/default/objects/Case/fields/CC_Tiempo_Estado_Pendiente__c.field-meta.xml
<CustomField>
    <fullName>CC_Tiempo_Estado_Pendiente__c</fullName>
    <description>Calcula el tiempo que pasa en estado pendiente</description>
    <formula>IF(ISPICKVAL(Status , &apos;Pendiente Colaborador&apos;),
	(NOW()-CC_Fecha_Traslado_Colaborador__c)*24,
	IF(ISPICKVAL(Status , &apos;Pendiente Interno&apos;),
		(NOW()-CC_Fecha_Traslado_3N__c)*24,
		IF(ISPICKVAL(Status , &apos;Pendiente Incidencia&apos;),
			(NOW()-CC_Agrupador_Id__r.CC_Fecha_creacion_MAXIMO__c)*24,
			null
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo Estado Pendiente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>