force-app/main/default/objects/Case/fields/CC_Tiempo_Nivel_1__c.field-meta.xml
<CustomField>
    <fullName>CC_Tiempo_Nivel_1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Campo para almacenar el tiempo invertido en 1N</description>
    <label>Tiempo Nivel 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>