force-app/main/default/objects/Case/fields/CC_Tiempo_Respuesta_Twitter__c.field-meta.xml
<CustomField>
    <fullName>CC_Tiempo_Respuesta_Twitter__c</fullName>
    <description>Tiempo en lo que tarda el agente en atender y responder al Twitter. Resultado en minutos.</description>
    <formula>IF(
    NOT(
    ISBLANK(CC_Fecha_Twitter_Entrante__c)
    ),
    IF(
        NOT(
        ISBLANK(CC_Fecha_1a_Respuesta_Twitter__c)
        ),
        (CC_Fecha_1a_Respuesta_Twitter__c - CC_Fecha_Twitter_Entrante__c)*24*60,
        IF(
            NOT(
            ISBLANK(ClosedDate)
            ),
            (ClosedDate - CC_Fecha_Twitter_Entrante__c)*24*60,
            (NOW() - CC_Fecha_Twitter_Entrante__c)*24*60
        )
    ),
    IF(
        OR(ISPICKVAL(Status,&quot;Rechazado&quot;), ISPICKVAL(Status,&quot;Cerrado&quot;)),
        (ClosedDate - CreatedDate)*24*60,
        (NOW() - CreatedDate)*24*60
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo de Respuesta Twitter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>