force-app/main/default/objects/Case/fields/CC_Tipo_ChatTranscript__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_ChatTranscript__c</fullName>
    <label>Tipo ChatTranscript</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Tipo_Chat_Transcript</valueSetName>
    </valueSet>
</CustomField>