force-app/main/default/objects/Case/fields/CC_Tipo_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_Cliente__c</fullName>
    <defaultValue>&apos;Cliente&apos;</defaultValue>
    <description>Campo para indicar si el contacto es cliente o empleado.</description>
    <label>Tipología cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
                <default>true</default>
                <label>Cliente</label>
            </value>
            <value>
                <fullName>Empleado</fullName>
            </value>
            <value>
                <fullName>Prejubilado</fullName>
            </value>
            <value>
                <fullName>Proveedor</fullName>
            </value>
            <value>
                <fullName>No Cliente</fullName>
            </value>
            <value>
                <fullName>Prescriptor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>