force-app/main/default/objects/Case/fields/CC_Tipo_Contacto__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_Contacto__c</fullName>
    <description>Campo para indicar que tipo de contacto tiene el caso.</description>
    <label>Tipo de contacto</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CC_Canal_Procedencia__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CC_TipoContacto</valueSetName>
    </valueSet>
</CustomField>