force-app/main/default/objects/Case/fields/CC_Tipo_Gestion__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_Gestion__c</fullName>
    <label>Tipo de gestión</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Origin</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gestión</fullName>
            </value>
            <value>
                <fullName>Revisar Respuesta</fullName>
            </value>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Baja</fullName>
            </value>
            <value>
                <fullName>Modificación</fullName>
            </value>
            <value>
                <fullName>Tabulada</fullName>
            </value>
            <value>
                <fullName>Tabulada con gestión</fullName>
            </value>
            <value>
                <fullName>Personalizada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>