force-app/main/default/objects/Case/fields/CC_Titulo_Propuesta__c.field-meta.xml
<CustomField>
    <fullName>CC_Titulo_Propuesta__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Título propuesta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>