force-app/main/default/objects/Case/fields/CC_Tramo_TRZ__c.field-meta.xml
<CustomField>
    <fullName>CC_Tramo_TRZ__c</fullName>
    <label>Tramo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recibida - En evaluacion</fullName>
            </value>
            <value>
                <fullName>Asignada - En gestion</fullName>
            </value>
            <value>
                <fullName>Resuelta - En redaccion</fullName>
            </value>
            <value>
                <fullName>Cerrada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>