force-app/main/default/objects/Case/fields/CC_Transfer_Realizado__c.field-meta.xml
<CustomField>
    <fullName>CC_Transfer_Realizado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer realizado</label>
    <type>Checkbox</type>
</CustomField>