force-app/main/default/objects/Case/fields/CC_Ultima_Interaccion__c.field-meta.xml
<CustomField>
    <fullName>CC_Ultima_Interaccion__c</fullName>
    <label>Última interacción</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CC_Canal_Procedencia__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Respuesta de colaborador</fullName>
            </value>
            <value>
                <fullName>Respuesta de solicitud de información</fullName>
            </value>
            <value>
                <fullName>Nuevo</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>Respuesta de cliente</fullName>
            </value>
            <value>
                <fullName>Reasignación del caso</fullName>
            </value>
            <value>
                <fullName>Fin reclamación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>