force-app/main/default/objects/Case/fields/CC_Ultima_Operativa_Correo__c.field-meta.xml
<CustomField>
    <fullName>CC_Ultima_Operativa_Correo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Última operativa de correo (interno)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>