force-app/main/default/objects/Case/fields/CC_URL_Encuesta_3N__c.field-meta.xml
<CustomField>
    <fullName>CC_URL_Encuesta_3N__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL Encuesta 3N</label>
    <type>Url</type>
</CustomField>