force-app/main/default/objects/Case/fields/CC_URL_Encuesta_Formulario__c.field-meta.xml
<CustomField>
    <fullName>CC_URL_Encuesta_Formulario__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL Encuesta Formulario</label>
    <type>Url</type>
</CustomField>