force-app/main/default/objects/Case/fields/CC_URL_FAQ__c.field-meta.xml
<CustomField>
    <fullName>CC_URL_FAQ__c</fullName>
    <description>TEST</description>
    <encryptionScheme>None</encryptionScheme>
    <label>URL FAQ</label>
    <type>Url</type>
</CustomField>