force-app/main/default/objects/Case/fields/FRA_Campana_Fraude__c.field-meta.xml
<CustomField>
    <fullName>FRA_Campana_Fraude__c</fullName>
    <label>Campaña Fraude (OLD)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estafa: Cartas nigerianas</fullName>
            </value>
            <value>
                <fullName>Estafa: Falso empleado CaixaBank</fullName>
            </value>
            <value>
                <fullName>Estafa: Falso empleado de la Seguridad Social</fullName>
            </value>
            <value>
                <fullName>Estafa: Falso operador de telefonía</fullName>
            </value>
            <value>
                <fullName>Estafa: Falso  prestamista</fullName>
            </value>
            <value>
                <fullName>Estafa: Falso técnico de gas/agua/luz</fullName>
            </value>
            <value>
                <fullName>Estafa: Falso ténico Microsoft</fullName>
            </value>
            <value>
                <fullName>Estafa: Fraude al CEO</fullName>
            </value>
            <value>
                <fullName>Estafa: Fraude comercial</fullName>
            </value>
            <value>
                <fullName>Fraude facturas</fullName>
            </value>
            <value>
                <fullName>Estafa: Inversiones</fullName>
            </value>
            <value>
                <fullName>Estafa: Lotería</fullName>
            </value>
            <value>
                <fullName>Estafa: NS/NC</fullName>
            </value>
            <value>
                <fullName>Estafa: Romance Scam</fullName>
            </value>
            <value>
                <fullName>Estafa: Suplantación Identidad</fullName>
            </value>
            <value>
                <fullName>Malware: Móvil</fullName>
            </value>
            <value>
                <fullName>Malware: Rat Brasil</fullName>
            </value>
            <value>
                <fullName>Otros:Cliente Mula</fullName>
            </value>
            <value>
                <fullName>Otros:NS/NC</fullName>
            </value>
            <value>
                <fullName>Operación realizada bajo coacción</fullName>
            </value>
            <value>
                <fullName>Otros:Pérdida elemento posesión</fullName>
            </value>
            <value>
                <fullName>Otros:Proximidad</fullName>
            </value>
            <value>
                <fullName>Otros: Robo elemento de posesión</fullName>
            </value>
            <value>
                <fullName>Otros: Skimming</fullName>
            </value>
            <value>
                <fullName>Otros:Suplantación identidad oficina</fullName>
            </value>
            <value>
                <fullName>Phishing:Caixers x-pay</fullName>
            </value>
            <value>
                <fullName>Phising: Campañaenrollment CaixabankSign</fullName>
            </value>
            <value>
                <fullName>Phising: Campaña Phishing Bizum</fullName>
            </value>
            <value>
                <fullName>Phising: Genérica</fullName>
            </value>
            <value>
                <fullName>Phising: Imagin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>